# python08

ex2/: loading.py  pyproject.toml  requirements.txt
ex3/: env.example  gitignore  oracle.py
